<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblAddWalletTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAddWalletTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lblInputWalletProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintInputWalletProvider" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lblInputWalletName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintInputWalletName" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnInputUSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddWalletRadioButtonInputUSD" />

        <RadioButton
            android:id="@+id/btnInputEUR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddWalletRadioButtonEUR" />

        <RadioButton
            android:id="@+id/btnInputBTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddWalletRadioButtonBTC" />

        <RadioButton
            android:id="@+id/btnInputARS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddWalletRadioButtonARS" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lblInputWalletBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AddWalletInputTextBalance" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddWalletApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/AddWalletButtonApply"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnAddWalletButtonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/AddWalletButtonCancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDeleteWallet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/delete_wallet"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>